--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body {
 main {
   background-color: #fff;
   padding: 1rem;
-  max-width: 15rem;
+  max-width: 18rem;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 8px 7px 0 0;
@@ -56,12 +56,15 @@ p {
 .profile img {
   height: 2rem;
 }
-header h3 {
+header h1 {
   margin-top: 1rem;
   white-space: nowrap;
   width: 100%;
   object-fit: contain;
   font-weight: 800;
+}
+h1:hover {
+  color: hsl(47, 88%, 63%);
 }
 article {
   margin-top: 1rem;
